# storytel-sync

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yaml
src/: client_storytel_api.rs  config.rs  credentials.rs  download.rs  main.rs  mpv.rs  password_crypt.rs  tui.rs  web_app.rs
