[package]
name = "storytel-dl"
version = "0.1.0"
authors = ["javsanpar"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.20", features = ["json", "stream"] }
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"
openssl = { version = "0.10.41" }
dirs = "6"
actix-web = { version = "4", default-features = false }
clap = { version = "4.5.29", features = ["derive"] }
eyre = "0.6"
toml = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util"] }
rand = "0.9"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
